refactor: post_tag bulk insert 사용하도록 수정